--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ./src"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -19,7 +20,8 @@
     "react-dom": "^18",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^3"
+    "remark-gfm": "^3",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
