--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rehype-autolink-headings": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3",
+    "sharp": "^0.32.6",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
