--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-dom": "^18",
     "react-katex": "^3.0.1",
     "rehype-autolink-headings": "^7.0.0",
+    "rehype-katex": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3",
+    "remark-math": "^6.0.0",
     "sharp": "^0.32.6",
     "zustand": "^4.4.3"
   },
