--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "node .next/standalone/server.js",
+    "start": "next start",
     "lint": "next lint",
     "format": "prettier --write ./src"
   },
@@ -14,12 +14,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@matejmazur/react-katex": "^3.1.3",
+    "katex": "^0.16.9",
     "lodash.debounce": "^4.0.8",
     "next": "13.5.4",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-katex": "^3.0.1",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-katex": "^7.0.0",
     "rehype-slug": "^6.0.0",
@@ -34,7 +35,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-katex": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "autoprefixer": "^10",
