--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "katex": "^0.16.9",
     "lodash.debounce": "^4.0.8",
-    "next": "13.5.4",
+    "next": "^14.0.0",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
