--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src",
+    "test": "vitest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -16,7 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "katex": "^0.16.9",
     "lodash.debounce": "^4.0.8",
-    "next": "^14.0.0",
+    "next": "^14.1.3",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
@@ -30,22 +31,26 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@testing-library/react": "^14.1.2",
     "@types/lodash.debounce": "^4.0.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10",
-    "daisyui": "^3.9.2",
+    "daisyui": "^4.7.3",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "eslint-config-prettier": "^9.0.0",
+    "jsdom": "^23.2.0",
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "sass": "^1.69.2",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.2.0"
   }
 }
