--- a/package.json
+++ b/package.json
@@ -31,26 +31,27 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/react": "^15.0.2",
     "@types/lodash.debounce": "^4.0.8",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.2.78",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10",
     "daisyui": "^4.7.3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "^14.2.1",
     "eslint-config-prettier": "^9.0.0",
-    "jsdom": "^23.2.0",
+    "jsdom": "^24.0.0",
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "sass": "^1.69.2",
     "tailwindcss": "^3",
-    "typescript": "^5",
+    "typescript": "^5.3.0",
+    "vite": "^5.1.6",
     "vitest": "^1.2.0"
   }
 }
