--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "zustand": "^4.4.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/react": "^15.0.2",
     "@types/lodash.debounce": "^4.0.8",
